--- a/friends.html
+++ b/friends.html
@@ -113,7 +113,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super big...ㅠㅠ</span>
+      <span>Your screen is too big...😭ㅠㅠ</span>
     </div>
 
     <script
